RESOLVED FIXED238869
Fix the address sanitizer build when building with gcc
https://bugs.webkit.org/show_bug.cgi?id=238869
Summary Fix the address sanitizer build when building with gcc
Martin Robinson
Reported 2022-04-06 08:49:14 PDT
The build currently fails when trying to turn on the address sanitizer using the gcc compiler.
Attachments
Patch (1.25 KB, patch)
2022-04-06 08:52 PDT, Martin Robinson
no flags
Patch (1.29 KB, patch)
2022-04-18 03:03 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2022-04-06 08:52:03 PDT
Radar WebKit Bug Importer
Comment 2 2022-04-13 08:50:15 PDT
Philippe Normand
Comment 3 2022-04-18 02:58:43 PDT
Comment on attachment 456823 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456823&action=review > Source/JavaScriptCore/runtime/ConfigFile.cpp:248 > m_filename[s_maxPathLength] = '\0'; Missing _END before leaving scope?
Martin Robinson
Comment 4 2022-04-18 03:03:46 PDT
Martin Robinson
Comment 5 2022-04-18 03:04:22 PDT
(In reply to Philippe Normand from comment #3) > Comment on attachment 456823 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=456823&action=review > > > Source/JavaScriptCore/runtime/ConfigFile.cpp:248 > > m_filename[s_maxPathLength] = '\0'; > > Missing _END before leaving scope? Oof. Yes. Thanks for spotting that. I've uploaded a new version of the change.
EWS
Comment 6 2022-04-18 05:44:37 PDT
Found 1 new test failure: http/tests/privateClickMeasurement/store-private-click-measurement-with-source-nonce.html
EWS
Comment 7 2022-04-19 01:49:25 PDT
Committed r293010 (249749@main): <https://commits.webkit.org/249749@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457803 [details].
Note You need to log in before you can comment on or make changes to this bug.