Fix the address sanitizer build when building with gcc https://bugs.webkit.org/show_bug.cgi?id=238869

Reviewed by Philippe Normand.

* runtime/ConfigFile.cpp:
(JSC::ConfigFile::ConfigFile):

Canonical link: https://commits.webkit.org/249749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293010 268f45cc-cd09-0410-ab3c-d52691b4dbfc